--- a/css/styles.css
+++ b/css/styles.css
@@ -66,3 +66,43 @@
     margin: 0 auto;
     margin-top: 30px;
 }
+
+/* SHOW / CONTATOS UNICOS */
+
+#view-contact-container{
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+#back-link-container{
+    display: block;
+    width: 500px;
+    margin: 30px auto 0;
+}
+
+#back-link{
+    border: 1px solid #007bff;
+    color: #007bff;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+#back-link:hover{
+    text-decoration: none;
+}
+
+/* CRIAR DADOS */
+
+#create-form,
+#edit-form{
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+#observations{
+    margin-bottom: 17px;
+}
