--- a/css/styles.css
+++ b/css/styles.css
@@ -106,3 +106,11 @@
 #observations{
     margin-bottom: 17px;
 }
+
+/* CONFIGURAÇÃO PRA MOBILE TLG */
+
+@media(max-width: 480px){
+    #home-link{
+        display: none;
+    }
+}
